tests/v0-fail/timeout.out
Running <root>/timeout.cli ...

echo "Goodnight, forever!" && sleep 60
---
Goodnight, forever!
Process took too long!
---
❌ FAIL: timed out
 → echo "Goodnight, forever!" && sleep 60

<root>/timeout.cli FAILED
Error: timed out at line <root>/timeout.cli:3

