tests/v0-fail/timeout.cli
#!/usr/bin/env clitest --v0

$ sleep 60
%TIMEOUT 100ms
